<resources>
    <string name="app_name">RenoUp</string>

    <string name="title_section1">Skickade avvikelser</string>
    <string name="title_section2">Friends</string>


    <string name="action_settings">Inställningar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_field">Användarnamn</string>
    <string name="password_hint">Lösenord</string>
    <string name="login_button_label">Logga in</string>
    <string name="signup_text">Skapa Konto</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_error_message">Du måste fylla i alla fälten.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="login_error_message">Skriv in Användarnamn och lösenord.</string>
    <string name="logout_label">Logga ut</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="no_messages_label">No new messages!</string>
    <string name="empty_friends_label">You got no friends =(</string>
    <string name="edit_friends_menu">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

    <string name="hello_world">Hello world!</string>
    <string name="error_external_storage">Problem accessing storage</string>
    <string name="general_error">Something went wrong</string>
    <string name="select_video_toast">The selected video mus be less then 10 MB</string>
    <string name="error_filesize_too_large">The file is greater than 10MB</string>




    <string name="title_activity_recipient">Adress och felkod</string>
    <string name="send_menu_send_button">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select another</string>
    <string name="error_selecting_file_title">Sorry!</string>
    <string name="success_message">Message Sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="title_activity_view_image">RenoUp</string>
    <string name="content_description_background_image">Background image</string>
    <string name="subtitle">För RenoNorden Vellinge</string>
    <string name="title">RenoUp</string>
    <string name="signup">Skapa konto</string>
    <string name="reset_password">Återställ</string>
    <string name="waiting_dialog">Vänta..</string>
    <string name="loggingin_dialog">Loggar in...</string>
    <string name="email">E-post</string>
    <string name="cancel_button">Avbryt</string>
    <string name="settings">Inställningar</string>
    <string name="push_message">You have a new message from %s</string>
    <string name="send_message">Skicka meddelande</string>
    <string name="title_activity_settings">Inställningar</string>
    <string name="save_settings_button_label">Spara inställningar</string>
    <string name="avvikelser">Inga skickad avvikelser</string>
    <string name="getting_messages_from_server">Hämtar från servern</string>
    <string name="sending">Skickar...</string>
    <string name="sent">Skickat!</string>
    <string name="must_pick_route_toast">Du måste välja en tur</string>
    <string name="gps_button_desc">Klicka på GPS för att hämta adress. \n \n Du kan behöva klicka flera gånger för att få så exakt adress som möjligt</string>
    <string name="send_again">Skicka igen</string>
    <string name="map">Karta</string>
    <string name="resetpassword_dialog">Ett mail har skickats till dig där du kan återställa ditt lösenord</string>
    <string name="done">Klart!</string>
    <string name="message_from">"Meddelande från: "</string>


    <string-array name="felkoder">

        <item>Ej utställt</item>
        <item>Fel innehåll</item>
        <item>Felvänt kärl</item>
        <item>Hinder för tömning</item>
        <item>Snö/Halt</item>
        <item>Överfullt</item>
        <item>Övrigt</item>


    </string-array>




    <string-array name="turer">
        <item>Välj tur</item>
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>


    </string-array>


</resources>
