<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/background_Green"
                tools:context="eu.brimir.renoup.UI.SignupActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_description_background_image"
        android:scaleType="fitStart"
        android:src="@drawable/background"
        />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/linearLayout"
        android:alpha="0.8"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHint="@color/edittext_light_grey"
            android:textSize="17sp"
            android:id="@+id/firstNameField"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="Förnamn"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHint="@color/edittext_light_grey"
            android:textSize="17sp"
            android:id="@+id/lastNameField"
            android:layout_below="@+id/firstNameField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="Efternamn"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:textColorHint="@color/edittext_light_grey"
        android:textSize="17sp"
        android:hint="@string/username_field"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="@color/edittext_light_grey"
        android:textSize="17sp"
        android:hint="@string/password_hint"
        android:id="@+id/passwordField"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColorHint="@color/edittext_light_grey"
        android:textSize="17sp"
        android:id="@+id/emailField"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ditt konto måste bli aktiverat av administratören innan du kan använda det."
        android:id="@+id/textView2"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:id="@+id/signupButton"
            android:textColor="@android:color/white"
            android:layout_below="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:background="@drawable/button_custom"

            android:layout_toLeftOf="@+id/cancelSignUpButton"
            android:layout_toStartOf="@+id/cancelSignUpButton"
            android:layout_weight="50"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:textColor="@android:color/white"
            android:background="@drawable/button_custom"
            android:id="@+id/cancelSignUpButton"
            android:layout_below="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_weight="50"/>
    </LinearLayout>
</RelativeLayout>
